--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mysql2": "^2.0.1",
     "puppeteer": "^2.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "sequelize": "^5.21.2"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^5.5.1"
   }
 }
