--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "commander": "^4.0.1",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "mysql2": "^2.0.1",
     "puppeteer": "^2.0.0",
     "rxjs": "^6.5.3",
