prepara arquivos para deploy no app engine

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "brasileirao": "./championship-scrapper.js"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Lohanna",
