--- a/package.json
+++ b/package.json
@@ -13,20 +13,17 @@
   "author": "Lohanna",
   "license": "ISC",
   "dependencies": {
-    "commander": "^4.0.1",
-    "express": "^4.17.1",
+    "commander": "^4.1.0",
+    "csv-writer": "^1.6.0",
     "moment": "^2.24.0",
-    "mysql2": "^2.0.1",
-    "node-cron": "^2.0.3",
-    "puppeteer": "^2.0.0",
-    "rxjs": "^6.5.3",
-    "sequelize": "^5.21.2"
+    "puppeteer": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "@babel/register": "^7.7.4",
     "@types/jest": "^24.9.1",
+    "@types/node": "^13.5.3",
     "@types/puppeteer": "^2.0.0",
     "jest": "^25.1.0",
     "sequelize-cli": "^5.5.1",
