--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brasileirao-api",
   "version": "1.0.0",
-  "description": "A api que serve a classificação do campeonato brasileiro",
+  "description": "A api que extrai a classificação do campeonato brasileiro",
   "main": "index.js",
   "bin": {
     "brasileirao": "./dist/src/run.js"
@@ -15,10 +15,10 @@
   "dependencies": {
     "commander": "^4.1.0",
     "csv-writer": "^1.6.0",
+    "excel4node": "^1.7.2",
     "moment": "^2.24.0",
     "ora": "^4.0.3",
     "puppeteer": "^2.0.0",
-    "xlsx": "^0.15.5"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
